--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="col-md-12 col-sm-12">
                     <img class="photo" src="assets/images/IMG_5860.jpg">
                         <div class="text">Intelligent. Creative. Driven.</div>
-                        <div class="text">These are adjectives. Dave Hauck knows these adjectives. He knows how to spell them. He knows how to pronounce them. And he knows how to use them in complete sentences. He knows many other adjectives, too. Like thick. And plaid. And unflinchingly. Actually that's an adverb; he struggles a bit with adverbs. But he also knows lots of nouns and a few family-friendly verbs, too.</div>
+                        <div class="text">These are adjectives. Dave Hauck knows these adjectives. He knows how to spell them. He knows how to pronounce them. And he knows how to use them in complete sentences. He knows many other adjectives, too. Like thick. And plaid. And unflinchingly. Actually that's an adverb; he struggles a bit with adverbs. But he also knows lots of nouns as well as a few family-friendly verbs.</div>
                         <div class="text">If you are looking for a full-stack web developer with experience in html, css and javascript, and who also knows many, many words, Dave just might be your man.</div>
                 </div>
             </div>
