--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     </head>
 
     <body>
-        <!-- header -->
+        <!-- header & navigation -->
         <section class="col-md-12 col-sm-12">
             <div class="wrapTop col-md-12 col-sm-12">     
                 <div id="name">David S. Hauck</div>
         
-        <!-- navigation -->
                 <div id="bullets">
                     <ul>
                         <li><a href="index.html">About</li></a>
@@ -42,7 +41,7 @@
             </div>
     </body>
     
-    <!-- footer -->
+    <!-- footer --> 
     <footer>
         <div class="footer">Copyright &#169; 2019 </div>
     </footer>
